--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,15 @@
                 "  * Remove the plugin that prints this message:",
                 "      composer remove drupal/core-project-message"
             ]
+        },
+        "patches": {
+            "drupal/core": {
+                "#3444246: Create a config action to set the status of the entity": "./patches/core/recipes-103.patch",
+                "Add config actions to make a bundle of an entity type translatable": "./patches/core/make-translatable-action.patch"
+            },
+            "drupal/project_browser": {
+                "#3446257: Create a source plugin that exposes recipes in the file system": "./patches/project_browser/473-9fb69df1.patch"
+            }
         }
     }
 }
