--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
-        "drush/drush": "^12.5"
+        "drush/drush": "^12.5",
+        "oomphinc/composer-installers-extender": "^2"
     },
     "require-dev": {
         "drupal/core-dev": "^10.3"
@@ -38,7 +39,8 @@
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "php-http/discovery": true,
-            "cweagans/composer-patches": true
+            "cweagans/composer-patches": true,
+            "oomphinc/composer-installers-extender": true
         },
         "sort-packages": true
     },
