--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "drupal/gin_toolbar": "1.x-dev",
         "drupal/metatag": "^2.0",
         "drupal/project_browser": "1.0.x-dev",
+        "drupal/redirect": "^1.9",
         "drupal/uli_custom_workflow": "^1.0",
         "drush/drush": "^12.5",
         "oomphinc/composer-installers-extender": "^2"
