--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
+        "drupal/layout_paragraphs": "^2.0",
         "drush/drush": "^12.5",
         "erikdekamps/subsites_core": "@dev",
         "oomphinc/composer-installers-extender": "^2"
@@ -86,6 +87,15 @@
             "recipes/{$name}": ["type:drupal-recipe"]
         },
         "installer-types": ["drupal-recipe"],
+        "enable-patching": true,
+        "patches": {
+            "drupal/lazy": {
+                "Fix #3340222 - php 8.2 deprecations warnings": "https://www.drupal.org/files/issues/2023-02-08/3340222-php-8.2-deprecations.patch"
+            },
+            "drupal/core": {
+                "Fix #3418482 - Argument #1 ($elements) must be of type array, null given, called in core layout_discovery.module": "patches/layout_discovery.patch"
+            }
+        },
         "drupal-core-project-message": {
             "include-keys": ["homepage", "support"],
             "post-create-project-cmd-message": [
